| Summary: | ASTERISK-28525: chan_dahdi: set CHANNEL(hangupsource) when a PRI channel hangs up | ||||
| Reporter: | Frederic LE FOLL (flefoll) | Labels: | |||
| Date Opened: | 2019-09-05 02:37:58 | Date Closed: | 2019-09-11 07:10:16 | ||
| Priority: | Minor | Regression? | No | ||
| Status: | Closed/Complete | Components: | Channels/chan_dahdi | ||
| Versions: | 16.4.0 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Asterisk with Digium PRI card | Attachments: | |||
| Description: | When the remote ISDN party ends an ISDN call on a PRI link (DISCONNECT), CHANNEL(hangupsource) information is not available.
chan_dahdi already contains an ast_set_hangupsource() in __dahdi_exception() function but it seems that ISDN messages processing does not use this part of code. I would like to propose a patch, in order to set CHANNEL(hangupsource) in sig_pri (since sig_pri handles ISDN signaling for chan_dahdi), each time sig_pri queues a hangup control frame, i.e. when call end comes from the PRI channel. | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2019-09-05 02:38:00.386-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Frederic LE FOLL (flefoll) 2019-09-05 03:19:54.225-0500 Problem with git commit: "Unknown option: -c", I may have a problem with my git version being too old: 1.7.1. I will retry to create the Gerrit review from another location soon. By: Friendly Automation (friendly-automation) 2019-09-11 07:10:17.852-0500 Change 12846 merged by Friendly Automation: chan_dahdi: set CHANNEL(hangupsource) when a PRI channel hangs up [https://gerrit.asterisk.org/c/asterisk/+/12846|https://gerrit.asterisk.org/c/asterisk/+/12846] By: Friendly Automation (friendly-automation) 2019-09-11 07:12:02.504-0500 Change 12858 merged by Joshua Colp: chan_dahdi: set CHANNEL(hangupsource) when a PRI channel hangs up [https://gerrit.asterisk.org/c/asterisk/+/12858|https://gerrit.asterisk.org/c/asterisk/+/12858] By: Friendly Automation (friendly-automation) 2019-09-11 07:12:15.522-0500 Change 12857 merged by Joshua Colp: chan_dahdi: set CHANNEL(hangupsource) when a PRI channel hangs up [https://gerrit.asterisk.org/c/asterisk/+/12857|https://gerrit.asterisk.org/c/asterisk/+/12857] By: Friendly Automation (friendly-automation) 2019-09-11 07:16:13.655-0500 Change 12859 merged by Friendly Automation: chan_dahdi: set CHANNEL(hangupsource) when a PRI channel hangs up [https://gerrit.asterisk.org/c/asterisk/+/12859|https://gerrit.asterisk.org/c/asterisk/+/12859] | ||||